Clear hash when setting URL in document.open()

A document created via document.open()/write()/close() will have
as its URL the "responsible document" (see step #23 of
https://html.spec.whatwg.org/multipage/webappapis.html#dom-document-open)

This is a problem when the URL includes a fragment identifier, any
frame with a document.open from a document with a fragment will try
to scroll the iframe into view. I believe the intent in the spec was
not to include the hash.

BUG=699267

Review-Url: https://codereview.chromium.org/2801093002
Cr-Commit-Position: refs/heads/master@{#466770}

Former-commit-id: 783d491b68d1b5833b65accba2e4fd595f09a404